<resources>
    <string name="app_name">Game Of Memory 2K17</string>

    <string name="action_info">Informations</string>
    <string name="mail">Email</string>
    <string name="action_retour">Retour</string>
    <string name="camera">Camera</string>
    <string name="help">Help</string>
    <string name="web_search">Web Search</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>

    <string name="action_facebook">Facebook</string>
    <string name="action_youtube">YouTube</string>
    <string name="action_google_plus">Google Plus</string>
    <string name="action_linkedin">LinkedIn</string>
    <string name="action_whatsapp">WhatsApp</string>

    <string name="action_start">Start</string>
    <string name="action_about">A propos</string>
    <string name="parametres">Paramètres</string>


    <string name="high_scores">High Scores</string>
    <string name="action_website">http://heritier.kipaka.free.fr/</string>


    <string name="AboutDeveloppeur">Image de la barre du bas</string>
    <string name="action_close">Quittez app</string>


    <string-array name="type">
        <item>New Game</item>
        <item>2 X 3</item>
        <item>3 X 3</item>
        <item>3 X 4</item>
        <item>4 X 4</item>
        <item>4 X 5</item>
    </string-array>

    <string name="title_activity_second">Titre 2eme Activity</string>
    <string name="action_second_activity">SecondActivity</string>


    <string name="Add_New">Add New Scores</string>
    <string name="edit">Edit Scores</string>
    <string name="delete">Delete Scores</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="turns"> Nombre de tours</string>
    <string name="id_gamers"> Joueurs </string>
    <string name="dateturns">Date de creation </string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
