<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_outline"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="ifRoom"/>
 <item
        android:id="@+id/action_website"
        android:icon="@drawable/ic_airplay_white"
        android:orderInCategory="100"
        android:title="@string/action_website"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/retour"
        android:icon="@drawable/ic_arrow_back_white"
        android:orderInCategory="100"
        android:title="@string/action_retour"
        app:showAsAction="ifRoom"/>

   <!-- <item
        android:id="@+id/camera"
        android:orderInCategory="100"
        android:title="@string/camera"
        app:showAsAction="never"/>

    <item
        android:id="@+id/web_search"
        android:orderInCategory="100"
        android:title="@string/web_search"
        app:showAsAction="never"/>

    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never"/> -->

</menu>